# TradeSavvy

./: .env.template  .gitignore  Makefile  README.MD  README.md  instruments_config_scalpell.json.template  pyproject.toml
app/: client.py  config.py  main.py
app/instruments_config/: models.py  parser.py
app/sqlite/: client.py
app/stats/: handler.py  sqlite_client.py
app/strategies/: base.py  errors.py  models.py  strategy_fabric.py
app/strategies/scalpel/: models.py  scalpel.py
app/utils/: portfolio.py  quantity.py  quotation.py
tests/: test_historical_data.py
tools/: get_accounts.py  get_figi.py
