[tool.poetry]
name = "tradesavvy"
version = "0.1.0"
description = ""
authors = ["Khuzin Rustam <ligreman@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tinkoff-investments = "^0.2.0b97"
black = "^24.3.0"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.4"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
